Restore KeyboardShowOverride when the ARC IME is uninstalled.

We disable Chrome OS VK while ARC++ IME by observing
OnActivate/OnDeactivate event, but it's not called when the IME is
removed.
This CL moves the logic to disable/re-enable Chrome OS VK to
InputMethodChanged which is called always when the active IME is
changed.

Bug: 895728
Test: manual & unit_tests
Change-Id: If57a725de23ae3315046bc4f511ac9d343bfbf8d
Reviewed-on: https://chromium-review.googlesource.com/c/1282690
Commit-Queue: Yusuke Sato <yusukes@chromium.org>
Reviewed-by: Yusuke Sato <yusukes@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600028}
Former-commit-id: dd3006ca39d0f50feb4e687488f4b8c9653473cd